--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "27.0.1"
     defaultConfig {
         applicationId "uk.me.desiderio.mimsbakes"
-        minSdkVersion 19
+        minSdkVersion 26
         targetSdkVersion 27
         versionCode 21
         versionName "1.0"
@@ -39,9 +39,20 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.google.android.exoplayer:exoplayer-core:2.6.1'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.6.1'
+
+    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
+
+    androidTestImplementation 'com.android.support:support-annotations:22.2.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.1'
+    androidTestImplementation 'org.mockito:mockito-core:1.10.19'
+
+
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:1.10.19'
-    testImplementation "org.robolectric:robolectric:3.5.1"
+    testImplementation "org.robolectric:robolectric:3.7.1"
     testImplementation 'org.assertj:assertj-core:3.8.0'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
