Refractor values into the dimens file. Adds gradle variables for the version of the support library and others.

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,13 @@ buildscript {
     }
 }
 
+ext {
+    supportLibVersion = '27.1.0'
+    espressoLibVersion = '3.0.1'
+    retrofitLibVersion = '2.3.0'
+    exoplayerLibVersion = '2.6.1'
+}
+
 allprojects {
     repositories {
         google()
