--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,35 +26,36 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation 'com.android.support:cardview-v7:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.android.support:support-v4:27.0.2'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.6.1'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.6.1'
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
+    implementation "com.android.support:cardview-v7:${supportLibVersion}"
+    implementation "com.android.support:design:${supportLibVersion}"
+    implementation "com.android.support:support-v4:${supportLibVersion}"
+    implementation "com.android.support.constraint:constraint-layout:1.0.2"
+    implementation "com.google.code.gson:gson:2.8.2"
+    implementation "com.squareup.retrofit2:retrofit:${retrofitLibVersion}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofitLibVersion}"
+    implementation "com.squareup.picasso:picasso:2.5.2"
+    implementation "de.hdodenhof:circleimageview:2.2.0"
+    implementation "com.google.android.exoplayer:exoplayer-core:${exoplayerLibVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-ui:${exoplayerLibVersion}"
 
-    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
+    implementation "com.android.support.test" +
+            ".espresso:espresso-idling-resource:${espressoLibVersion}"
 
-    androidTestImplementation 'com.android.support:support-annotations:22.2.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.1'
-    androidTestImplementation 'org.mockito:mockito-core:1.10.19'
+    androidTestImplementation "com.android.support:support-annotations:22.2.1"
+    androidTestImplementation "com.android.support.test:runner:1.0.1"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:${espressoLibVersion}"
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:${espressoLibVersion}"
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:${espressoLibVersion}"
+    androidTestImplementation "org.mockito:mockito-core:1.10.19"
 
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation "junit:junit:4.12"
+    testImplementation "org.mockito:mockito-core:1.10.19"
     testImplementation "org.robolectric:robolectric:3.7.1"
-    testImplementation 'org.assertj:assertj-core:3.8.0'
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
-        exclude group: 'com.android.support', module: 'support-annotations'
+    testImplementation "org.assertj:assertj-core:3.8.0"
+    androidTestImplementation("com.android.support.test.espresso:espresso-core:${espressoLibVersion}", {
+        exclude group: "com.android.support", module: "support-annotations"
     })
 }
